infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth   # for service selector
    spec:
      containers:
        - name: auth
          # image: avgsteve/ticketing-auth:latest
          # image: us.gcr.io/ticket-dev-303913/auth        
          image: gcr.io/ticket-dev-303913/auth
          # imagePullPolicy: Never
          # ==== 設定環境變數 ====
---
# Config for service
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth  # find the pod with the metadata label of "auth"
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
