infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          # https://hub.docker.com/_/nats-streaming/ ==> command line options
          args:
            # Embedded NATS Server Options:
            [
              '-p',   # -p: Use port for clients (default: 4222)
              '4222', 
              '-m',   # -m: Use port for http monitoring 
              '8222',
              '-hbi', # -hbi: Interval at which server sends heartbeat to a client
                      # 設定每幾秒送出一次 heartbeat 檢查 client 是否還保持連線
              '5s',
              '-hbt', # -hbt: How long server waits for a heartbeat response
                      # 設定等待回復 heartbeat 的時間是多久
              '5s',
              '-hbf', # -hbf: Number of failed heartbeats before server closes the client connection
                      # 設定接收 heartbeat 失敗的次數，超過就斷開連線
              '2',
              '-SD', # -Enable STAN debugging output
              '-cid',  # Cluster ID (default: test-cluster)
              'ticketing',
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
