infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders   # for service selector
    spec:
      containers:
        - name: orders
          # image: avgsteve/ticketing-orders:latest
          # image: us.gcr.io/ticket-dev-303913/orders        
          image: avgsteve/ticketing-orders
          # imagePullPolicy: Never
          # ==== 設定環境變數 ====
---
# Config for service
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders  # find the pod with the metadata label of "orders"
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
