infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets   # for service selector
    spec:
      containers:
        - name: tickets
          # image: avgsteve/ticketing-tickets:latest
          # image: us.gcr.io/ticket-dev-303913/tickets        
          image: avgsteve/ticketing-tickets
          # imagePullPolicy: Never
          # ==== 設定環境變數 ====
---
# Config for service
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets  # find the pod with the metadata label of "tickets"
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
